Article controller and tests working
