# src/main/kotlin/com/celada/blog/RestControllers.kt
@@ -7,21 +7,21 @@ import org.springframework.web.bind.annotation.RequestMapping
 import org.springframework.web.bind.annotation.RestController
 import org.springframework.web.server.ResponseStatusException
 
-@RestController
-@RequestMapping("/api/article")
-class ArticleController(private val repository: ArticleRepository) {
-
-    @GetMapping("/")
-    fun findAll() = repository.findAllByOrderByAddedAtDesc()
-
-    @GetMapping("/{slug}")
-    fun findOne(@PathVariable slug: String) =
-        repository.findBySlug(slug) ?: throw ResponseStatusException(
-            HttpStatus.NOT_FOUND,
-            "This article does not exist"
-        )
-
-}
+//@RestController
+//@RequestMapping("/api/article")
+//class ArticleController(private val repository: ArticleRepository) {
+//
+//    @GetMapping("/")
+//    fun findAll() = repository.findAllByOrderByAddedAtDesc()
+//
+//    @GetMapping("/{slug}")
+//    fun findOne(@PathVariable slug: String) =
+//        repository.findBySlug(slug) ?: throw ResponseStatusException(
+//            HttpStatus.NOT_FOUND,
+//            "This article does not exist"
+//        )
+//
+//}
 
 @RestController
 @RequestMapping("/api/user")
